--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,7 +12,7 @@
   justify-content: space-between;
   z-index: 2;
   width: 100%;
-  position: sticky !important; /* !important to override Gmaps inline CSS */
+  // position: sticky !important; /* !important to override Gmaps inline CSS */
   top: 0 !important;
   // position: fixed;
 }
@@ -97,7 +97,7 @@
   justify-content: space-between;
   z-index: 2;
   width: 100%;
-  position: sticky !important; /* !important to override Gmaps inline CSS */
+  // position: sticky !important; /* !important to override Gmaps inline CSS */
   top: 0 !important;
   // position: fixed;
 }
