--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,20 @@
 // Specific CSS for your home-page
 
+.container-home {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+    h1 {
+    margin: 20px;
+    padding: 45px 10px 0px;
+    font: 44px "Arial";
+  }
+}
+
 // HOME DIAGONAL BOX
-#header-row {
+.header-home {
   position: relative;
-  height: 300px;
+  height: 290px;
   margin: 0;
   padding: 0;
   // overflow: hidden;
@@ -30,42 +41,94 @@
 }
 
 // TITRES ET TEXTES:
-h1 {
-  margin: 0;
-  padding: 30px 10px 0px;
-  font: 44px "Arial";
+
+.main-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #main-title{
   transform: skewY(6deg);
+  img {
+    width: 90%;
+    margin: 18px;
+  }
 }
 
-#comment-title {
-// transform: skewY(6deg);
-padding: 5px 10px;
+.body-home{
+  padding: 10px 25px 0px 25px;
+}
+
+.comment-form {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.comment-form-text {
+font-family: Roboto;
+font-style: italic;
+font-weight: normal;
+line-height: normal;
+font-size: 15px;
 text-align: center;
+color: rgba(0, 0, 0, 0.66);
 }
 
-.btn-submit{
-  width: 150px;
+.first-form {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+
+.body-home {
+  .form-control {
+  border: 0;
+  background: none;
+  border-bottom: 1px solid #14C98E;
+  margin-bottom: 20px;
+  height: 30px;
+  box-shadow:none;
+  }
+}
+
+.form-component-1 {
+  label {
+    font: 16px "Arial";
+  }
+}
+
+.form-component-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   margin-top: 15px;
-  float:right !important;
 }
 
 //SLIDER RANGE (BOOTSTRAP):
+.slider-handle {
+  background-image: linear-gradient(to bottom, #14c98e 0%, #14c98e 100%) !important;
+  border:none !important;
+}
+
 .slider-track{
-  height: 5px !important;
+  height: 2px !important;
   top: 85% !important;
 }
 
 .slider-horizontal{
-  width: 100% !important;
-  height: 15px !important;
+  width: 90% !important;
+  margin-right: 18px;
+  margin-left: 18px;
 }
 
 .slider-handle.round {
-  width: 15px !important;
-  height: 15px !important;
+  width: 25px !important;
+  height: 25px !important;
 }
 
 .min-slider-handle{
@@ -76,33 +139,5 @@ text-align: center;
   background: red;
 }
 
-.first-form{
-  font-size: 14px;
-}
 
-// fleche dynamique vers le bas
-
-a { color: black; text-decoration: none; }
-
-.arrow {
-  text-align: center;
-  margin: 8% 0;
-}
-.bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
-}
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
 
