--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -131,6 +131,11 @@
                              data: { confirm: 'Are you sure?' },
                              class: "btn btn-custom-1" %>
         <% end %>
+          <div class="damage-question-button">
+            <%= link_to new_car_damage_path(@car) do %>
+              <button class="btn btn_primary">Ajouter un dommage</button>
+            <% end %>
+          </div>
       </div>
     </div>
   </div>
@@ -146,20 +151,15 @@
   <!-- le lien pour l'étape suivante-->
 
 
-<div class="final-step-button">
-  <%= link_to final_message_car_path(@car) do %>
-    <button class="btn btn-success btn-lg btn-block">Je valide !</button>
-  <%end%>
-</div>
-
-
-
-
-
-  <div class="damage-question-button">
-    <%= link_to new_car_damage_path(@car) do %>
-      <button class="btn btn_primary">Ajouter un dommage</button>
-    <% end %>
+  <div class="final-step-button">
+    <%= link_to final_message_car_path(@car) do %>
+      <button class="btn-hover color-5">Je valide !</button>
+    <%end%>
   </div>
 
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+     aria-valuemin="0" aria-valuemax="100" style="width:99%">
+    </div>
+  </div>
 </div>
