--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -7,6 +7,11 @@
     <p>Avez-vous des dommages sur votre voiture ?</p>
     <%= f.submit "Yes", class: "btn btn-primary", id: "submit-yes-damage"%>
     <%= link_to "No", final_validation_car_path(@car), class: "btn btn-danger" %>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:77.7%">
+        </div>
+      </div>
   </div>
 
   <div class="formDamage5 hidden">
@@ -16,6 +21,11 @@
       <%= f.input :description, as: :text %>
       <%= f.submit "Next", class: "btn btn-primary", id: "submit-damage-title-description"%>
     </div>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:88.8%">
+        </div>
+      </div>
   </div>
 
   <div class="formDamage6 hidden">
@@ -31,6 +41,11 @@
       </div>
     </div>
     <%= f.submit "Submit", class: "btn btn-primary", id: "submit-damage-pic" %>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:88.8%">
+        </div>
+      </div>
   </div>
 
 <%end%>
