--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -7,12 +7,14 @@
     <div class="form1">
       <div class="description-edit">
         <div class="description-edit-1">
-          <%= f.input :why_selling, label: "Pour quelle raison vendez-vous votre voiture ?", as: :text %>
+          <div>
+            <%= f.input :why_selling, label: "Pour quelle raison vendez-vous votre voiture ?", placeholder:"Achat d'une nouvelle voiture", as: :text %>
+          </div>
         </div>
 
         <div class="description-edit-2">
           <div class="description-edit-2-1">
-            <%= f.submit "Continuer", class: "btn-hover color-5", id: "submit-why-selling" %>
+            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-why-selling" %>
           </div>
           <div class="description-edit-2-2">
             <div class="progress">
@@ -29,12 +31,12 @@
       <div class="edit-address">
 
         <div class="edit-address-1">
-          <%= f.input :location, label: "Dans quelle ville se situe votre voiture ?", as: :string %>
+          <%= f.input :location, label: "Dans quelle ville se situe votre voiture ?", placeholder:"Lyon", as: :string %>
         </div>
 
         <div class="edit-address-2">
           <div class="edit-address-2-1">
-            <%= f.submit "Continuer", class: "btn-hover color-5", id: "submit-address"%>
+            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-address"%>
           </div>
           <div class="edit-address-2-2">
             <div class="progress">
@@ -51,10 +53,10 @@
     <div class="form3 hidden">
       <div class="edit-kilometers">
         <div class="edit-kilometers-1">
-          <%= f.input :exact_kilometer, label: "Quel est le kilométrage exact de votre voiture ?", as: :integer %>
+          <%= f.input :exact_kilometer, label: "Quel est le kilométrage exact de votre voiture ?", placeholder:"123000", as: :integer %>
         </div>
         <div class="edit-kilometers-2">
-          <%= f.submit "Continuer", class: "btn-hover color-5", id: "submit-km"%>
+          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-km"%>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="70"
             aria-valuemin="0" aria-valuemax="100" style="width:44.4%">
@@ -78,7 +80,7 @@
           </div>
         </div>
         <div class="edit-pictures-2">
-          <%= f.submit "Continuer", class: "btn-hover color-5", id: "submit-picture"%>
+          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-picture"%>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="70"
             aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
@@ -94,7 +96,7 @@
           <%= f.input :next_technical_control_date, label: "Quelle est la date de votre dernier contrôle technique ?", as: :date %>
         </div>
         <div class="edit-technical-control-2">
-          <%= f.submit "Finaliser", class: "btn-hover color-5", id: "submit-technical-control"%>
+          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-technical-control"%>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="70"
             aria-valuemin="0" aria-valuemax="100" style="width:66.6%">
