--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Karl</title>
-    <link rel="icon"
-      type="image/jpg"
-      href="https://st2.depositphotos.com/5777248/11093/v/950/depositphotos_110931550-stock-illustration-yellow-vest-icon-cartoon-style.jpg">
+    <title>Karl - Arrêtez de vous faire rouler</title>
+     <meta name="description" content= "Karl vous permet de générer l'annonce de votre véhicule en moins de deux minutes pour ensuite l'expédier vers les principaux sites de vente à particuliers">.
+     <link rel="icon"
+     type="image/jpg"
+     href="https://st2.depositphotos.com/5777248/11093/v/950/depositphotos_110931550-stock-illustration-yellow-vest-icon-cartoon-style.jpg">
+     <meta property="og:title" content="Karl - Arrêtez de vous faire rouler">
+     <meta property="og:image" content="karl(1).png">
+     <meta property="og:description" content="Karl vous permet de générer l'annonce de votre véhicule en moins de deux minutes pour ensuite l'expédier vers les principaux sites de vente à particuliers.">
+  <meta property="og:site_name" content="Karl"/>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
