--- a/app/assets/stylesheets/damages/_new.scss
+++ b/app/assets/stylesheets/damages/_new.scss
@@ -10,6 +10,8 @@
     padding: 50px;
     box-shadow: 1px 2px 4px rgba(0,0,0,0.2);
     cursor: pointer;
+    width: 150px;
+    height: 150px;
   }
   li:last-child {
     margin-left: 20px;
