--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -1,64 +1,51 @@
-<div class="container-damages-edit">
+<div class="container">
+  <div class="formDamage1">
+    <p>Avez-vous des dommages sur votre voiture ?</p>
+    <p class="btn btn-primary" id="submit-yes-damage">Yes</p>
+    <%= link_to "No", final_validation_car_path(@car), class: "btn btn-danger" %>
+  </div>
 
-  <%= simple_form_for [@car, @damage] do |f| %>
-
-    <div class="formDamage1">
-      <p>Avez-vous des dommages sur votre voiture ?</p>
-      <%= f.submit "Yes", class: "btn btn-primary", id: "submit-yes-damage"%>
-      <%= link_to "No", final_validation_car_path(@car), class: "btn btn-danger" %>
+  <div id="form-damage">
+    <div class="choose-form-damage-nature">
+      <p>Quelle est la nature de votre dommage ?</p>
+      <ul class="damages-type">
+        <li data-name="Carrosserie" class="btn" data-target="form-carrosserie">
+          <i class="fas fa-car-crash"></i>
+          <h4 id="damages-type-font">Carrosserie</h4>
+        </li>
+        <li data-name="Mécanique" class='btn' data-target="form-mecanique">
+          <i class="fas fa-wrench"></i>
+          <h4 id="damages-type-font">Mécanique</h4>
+        </li>
+      </ul>
     </div>
 
-    <div class="formDamage2 hidden">
-      <div class="title-description-damage-edit">
-        <p>Quelle est la nature de votre dommage ?</p>
-        <ul class="damages-type">
-          <li data-name="Carrosserie" class="btn" id="type-carrosserie">
-            <i class="fas fa-car-crash"></i>
-            <h4 id="damages-type-font">Carrosserie</h4>
+    <div class="form-damage-nature" id="form-carrosserie">
+      <%= simple_form_for [@car, @damage] do |f| %>
+        <%= f.input :nature, as: :hidden %>
+        <ul>
+          <% Damage::CARROSSERIE.each do |damage| %>
+          <li data-value="<%= damage %>">
+            <%= damage %>
           </li>
-          <li data-name="Mécanique" class='btn' id='type-mecanique'>
-            <i class="fas fa-wrench"></i>
-            <h4 id="damages-type-font">Mécanique</h4>
-          </li>
+          <% end %>
         </ul>
-      </div>
-    </div>
-
-    <div class="formDamage3 hidden">
-      <label for="Mecanique">Le dommage sur la mécanique de votre voiture concerne:</label>
-      <% ['La batterie', 'embrayage', 'La boite de vitesse', 'La courroie de distribution', 'L électronique du moteur', 'Les disques de freins', 'L alimentation (pompe à injection)', 'Les éclairages (phares, feux, ampoules)', 'Le chauffage, la climatisation', 'Autre'].each do |damage| %>
-      <br><%= radio_button_tag 'Mecanique', damage, @mecanique == damage %>
-      <%= damage %>
-      <% end %>
-      <%= f.input :title, as: :hidden %>
-      <%= f.input :description, as: :text %>
-      <%= f.submit "Finaliser", class: "btn btn-primary", id: "submit-damage-title-description"%>
-    </div>
-
-    <div class="formDamage4 hidden">
-      <label for="carrosserie">Le dommage sur la carrosserie de votre voiture concerne:</label>
-      <% ['Un trou ou une fracture', 'Une déformation suite à un choc ', 'Une rayure', 'Une corosion', 'Autre'].each do |damage| %>
-      <br><%= radio_button_tag 'carrosserie', damage, @carrosserie == damage %>
-      <%= damage %>
-      <% end %>
-      <div class="formDamage5">
-        <div class="photo-edit">
-          <p>Ajouter des photos du dommage</p>
-          <div class="photo-upload-features">
-            <%= f.input :picture_1, class: "photo-upload" %>
-            <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload" %>
-            <%= f.input :picture_2, class: "photo-upload"  %>
-            <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
-            <%= f.input :picture_3, class: "photo-upload" %>
-            <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
-          </div>
+        <%= f.input :title, as: :hidden %>
+        <div class="photo-damages">
+          <%= f.input :picture_1, class: "photo-upload" %>
+          <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload" %>
+          <%= f.input :picture_2, class: "photo-upload"  %>
+          <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
+          <%= f.input :picture_3, class: "photo-upload" %>
+          <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
         </div>
-        <%= f.submit "Submit", class: "btn btn-primary", id: "submit-damage-pic" %>
-      </div>
-      <%= f.input :description, as: :text %>
-      <%= f.submit "Finaliser", class: "btn btn-primary", id: "submit-damage-title-description"%>
+        <%= f.input :description, as: :text %>
+        <%= f.submit "Finaliser", class: "btn btn-primary"%>
+      <% end %>
+
     </div>
-
-  <%end%>
-
+    <div class="form-damage-nature" id="form-mecanique">
+      Hello
+    </div>
+  </div>
 </div>
