--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Karl - Arrêtez de vous faire rouler</title>
-     <meta name="description" content= "Karl vous permet de générer l'annonce de votre véhicule en moins de deux minutes pour ensuite l'expédier vers les principaux sites de vente à particuliers">.
-     <link rel="icon"
-     type="image/jpg"
-     href="https://st2.depositphotos.com/5777248/11093/v/950/depositphotos_110931550-stock-illustration-yellow-vest-icon-cartoon-style.jpg">
-     <meta property="og:title" content="Karl - Arrêtez de vous faire rouler">
-     <meta property="og:image" content="karl(1).png">
-     <meta property="og:description" content="Karl vous permet de générer l'annonce de votre véhicule en moins de deux minutes pour ensuite l'expédier vers les principaux sites de vente à particuliers.">
-  <meta property="og:site_name" content="Karl"/>
+    <title><%= meta_title%></title>
+    <meta name="description" content="<%= meta_description %>">
+
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:title" content="<%= meta_title %>">
+    <meta name="twitter:description" content="<%= meta_description %>">
+    <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:image:src" content="<%= meta_image %>">
+    <link rel="icon"
+      type="image/jpg"
+      href="https://st2.depositphotos.com/5777248/11093/v/950/depositphotos_110931550-stock-illustration-yellow-vest-icon-cartoon-style.jpg">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
