--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,7 +3,7 @@
 @import "final-validation";
 @import "start-page";
 @import "final-message";
-@import "dashboard";
+@import "show";
 @import "damages";
 @import "edit";
 
