--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,7 +9,7 @@
   <% @cars.each do |car| %>
     <% if car.estimated_price %>
       <div class="votre-annonce">
-        <h2>Votre annonce</h2>
+        <h2>Vos annonces</h2>
       </div>
       <div class="add-picture-wrapper">
         <div class="container-caroussel">
