--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,8 +47,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Mon profil</a></li>
-        <li><a href="#">Dashboard</a></li>
-        <%= link_to "Dashboard", dashboard_path%>
+        <li><%= link_to "Dashboard", car_path(@car) unless @car.id.nil? %></li>
         <li><a href="#"></a></li>
       </ul>
     </div>
