--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -32,6 +32,14 @@
   width: 100vh;
   font-size: 14px;
   background-color: white;
+
+  &:first-child {
+    margin-right: 8px;
+  }
+
+  &:last-child {
+    margin-left: 8px;
+  }
 }
 
 .price-card-content {
