--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -1,8 +1,17 @@
 <div class="start-page-body container">
 
   <div class="body-high-part">
+    <div class="progress-box">
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:11.1%">
+        </div>
+      </div>
+    </div>
+
     <div class="start-title">
-      <h3>Rendez-vous près de votre voiture</h3>
+      <p>Pour commencer, vous devez vous rendre près de votre voiture.</p>
+      <p>Nous allons avoir besoin de votre kilometrage exacte, et de quelques photos</p>
     </div>
 
     <div class="car-image">
@@ -18,15 +27,6 @@
         <%end%>
       </div>
     </div>
-
-    <div class="progress-box">
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="70"
-        aria-valuemin="0" aria-valuemax="100" style="width:11.1%">
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
 
