--- a/app/assets/stylesheets/pages/_final-message.scss
+++ b/app/assets/stylesheets/pages/_final-message.scss
@@ -1,8 +1,13 @@
 .final-message-container {
   display: flex;
   flex-direction: column;
-  min-height: 90vh;
-  justify-content: center;
+  justify-content: space-between;
+  height: calc(100vh - 265px);
+  padding: 15px;
+  p {
+    font-size: 14px !important;
+    color: rgba(0, 0, 0, 0.66);
+  }
 }
 
 
