--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,43 +1,35 @@
 
 <div class="edit-container">
 
-  <h3>Votre annonce: </h3>
+<!--   <h3>Votre annonce: </h3> -->
   <%= simple_form_for(@car) do |f| %>
 
     <div class="form1">
       <div class="description-edit">
-        <div class="description-edit-1">
-          <div>
-            <%= f.input :why_selling, label: "Pour quelle raison vendez-vous votre voiture ?", placeholder:"Achat d'une nouvelle voiture", as: :text %>
-          </div>
-        </div>
 
-        <div class="description-edit-2">
-          <div class="description-edit-2-1">
-            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-why-selling" %>
-          </div>
-          <div class="description-edit-2-2">
+
+          <div class="description-edit-1-1">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
               aria-valuemin="0" aria-valuemax="100" style="width:22.2%">
               </div>
             </div>
           </div>
-        </div>
+
+          <div class="description-edit-1-1">
+            <%= f.input :why_selling, label: "Pour quelle raison vendez-vous votre voiture ?", placeholder:"Achat d'une nouvelle voiture", as: :text %>
+          </div>
+
+          <div class="description-edit-2-1">
+            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-why-selling" %>
+          </div>
+
       </div>
     </div>
 
     <div class="form2 hidden">
       <div class="edit-address">
 
-        <div class="edit-address-1">
-          <%= f.input :location, label: "Dans quelle ville se situe votre voiture ?", placeholder:"Lyon", as: :string %>
-        </div>
-
-        <div class="edit-address-2">
-          <div class="edit-address-2-1">
-            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-address"%>
-          </div>
           <div class="edit-address-2-2">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -45,29 +37,48 @@
               </div>
             </div>
           </div>
-        </div>
+
+          <div class="edit-address-1">
+            <%= f.input :location, label: "Dans quelle ville se situe votre voiture ?", placeholder:"Lyon", as: :string %>
+          </div>
+
+          <div class="edit-address-2">
+              <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-address"%>
+          </div>
 
       </div>
     </div>
 
     <div class="form3 hidden">
       <div class="edit-kilometers">
+
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:44.4%">
+          </div>
+        </div>
+
         <div class="edit-kilometers-1">
           <%= f.input :exact_kilometer, label: "Quel est le kilométrage exact de votre voiture ?", placeholder:"123000", as: :integer %>
         </div>
+
         <div class="edit-kilometers-2">
           <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-km"%>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:44.4%">
-            </div>
-          </div>
         </div>
+
+
       </div>
     </div>
 
     <div class="form4 hidden">
       <div class="edit-pictures">
+
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
+          </div>
+        </div>
+
         <div class="edit-pictures-1">
           <h5>Ajouter des photos :</h5>
           <div class="photo-upload-features">
@@ -79,30 +90,32 @@
             <%= f.input :photo_3_cache, as: :hidden, class: "photo-upload" %>
           </div>
         </div>
+
         <div class="edit-pictures-2">
           <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-picture"%>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
-            </div>
-          </div>
         </div>
+
+
       </div>
     </div>
 
     <div class="form5 hidden">
       <div class="edit-technical-control">
+
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100" style="width:66.6%">
+          </div>
+        </div>
+
         <div class="edit-technical-control-1">
           <%= f.input :next_technical_control_date, label: "Quelle est la date de votre dernier contrôle technique ?", as: :date %>
         </div>
+
         <div class="edit-technical-control-2">
           <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-technical-control"%>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:66.6%">
-            </div>
-          </div>
         </div>
+
       </div>
     </div>
 
