--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -1,7 +1,13 @@
 <div class="karl-container">
 
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+     aria-valuemin="0" aria-valuemax="100" style="width:95%">
+    </div>
+  </div>
+
   <div class="final-validation-title">
-    <h3 style="text-align:center">Validez votre annonce:</h3>
+    <h3 style="text-align:center">Récapitulatif</h3>
   </div>
 
   <div class="add-picture-wrapper">
@@ -39,7 +45,10 @@
   </div>
 
   <div class="final-validation-second-title">
-    <h4 style="text-align:center">Fiche technique:</h4>
+    <h5>Fiche technique</h5>
+  </div>
+
+  <div class="final-validation-line">
   </div>
 
   <div class="ad-info-wrapper">
@@ -75,7 +84,10 @@
 
   <div class="ad-detail-wrapper">
     <div class="title-ad-detail-wrapper">
-      <h5>Détails supplémentaires:</h5>
+      <h5>Détails supplémentaires</h5>
+    </div>
+
+    <div class="final-validation-line">
     </div>
 
     <div class="ad-detail-wrapper-details">
@@ -85,7 +97,7 @@
   </div>
 
   <div class="damages">
-    <h5>Dommages éventuels:</h5>
+    <h6>Dommages éventuels</h6>
     <% @car.damages.each do |damage| %>
     <div class="damage">
       <h6><%= damage.title %></h6>
@@ -140,15 +152,31 @@
     </div>
   </div>
 
-  <div class="ad-form-wrapper">
-    <%= simple_form_for(@car) do |f| %>
-    <%= f.input :announce_description, label: "Personnalisez votre annonce:", input_html:{value: f.object.announce_description.presence || "Bonjour, je vend ma #{@car.car_brand} #{@car.model_type} sur #{@car.location}. Je dois m'en séparer car je #{@car.why_selling?}"}%>
-    <%= f.input :given_price, label: "Prix proposé:", as: :integer, input_html:{value: f.object.given_price.presence || "#{@car.estimated_price}"}%>
-    <%= f.submit "Modifier", label: "Poster votre annonce", class: "btn btn-custom-2"%>
-    <%end%>
-  </div>
+  <div class="final-validation-last-modification">
 
-  <!-- le lien pour l'étape suivante-->
+    <div class="final-validation-third-title">
+      <h5>Personnalisez votre annonce</h5>
+    </div>
+
+    <div class="final-validation-line">
+    </div>
+
+    <%= simple_form_for(@car) do |f| %>
+    <div class="ad-form-wrapper-1">
+
+      <%= f.input :announce_description, label: "Description",input_html:{value: f.object.announce_description.presence || "Bonjour, je vend ma #{@car.car_brand} #{@car.model_type} sur #{@car.location}. Je dois m'en séparer car je #{@car.why_selling?}"}%>
+    </div>
+
+    <div class="ad-form-wrapper-2">
+      <%= f.input :given_price, label: "Prix", as: :integer, input_html:{value: f.object.given_price.presence || "#{@car.estimated_price}"}%>
+    </div>
+
+    <div class="ad-form-wrapper-3">
+      <%= f.submit "Modifier", label: "Poster votre annonce", class: "btn btn-custom-2"%>
+    </div>
+    <%end%>
+
+  </div>
 
 
   <div class="final-step-button">
@@ -157,9 +185,4 @@
     <%end%>
   </div>
 
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="70"
-     aria-valuemin="0" aria-valuemax="100" style="width:99%">
-    </div>
-  </div>
 </div>
