--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Karl</title>
 
-    <link rel="icon"
-      type="image/jpg"
-      href="https://st2.depositphotos.com/5777248/11093/v/950/depositphotos_110931550-stock-illustration-yellow-vest-icon-cartoon-style.jpg">
+
+    <link href="/assets/Logo.icone.png" rel="shortcut icon" type="image/x-icon" />
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
