--- a/app/assets/stylesheets/damages/_new.scss
+++ b/app/assets/stylesheets/damages/_new.scss
@@ -24,3 +24,22 @@
 .fa-car-crash, .fa-wrench {
   color: #2dc2c0;
 }
+
+.damages-nature{
+    display: flex;
+  justify-content: center;
+  li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    margin: 5px;
+    box-shadow: 1px 2px 4px rgba(0,0,0,0.2);
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+  }
+}
