--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title><%= meta_title %></title>
-
     <meta name="description" content="<%= meta_description %>">
+    <%= favicon_link_tag %>
+
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>" />
@@ -15,10 +16,6 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Karl</title>
-
-
-    <link href="/assets/Logo.icone.png" rel="shortcut icon" type="image/x-icon" />
 
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
