--- a/app/assets/stylesheets/damages/_new.scss
+++ b/app/assets/stylesheets/damages/_new.scss
@@ -26,7 +26,8 @@
 }
 
 .damages-nature{
-    display: flex;
+  flex-wrap: wrap;
+  display: flex;
   justify-content: center;
   li {
     list-style: none;
