--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -15,14 +15,14 @@
       <% if @car.photo_1.file.nil?%>
         <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
       <% else %>
-      <div class="carousel">
+<!--       <div class="carousel">
         <input type="radio" id="carousel-1" name="carousel[]" checked>
         <input type="radio" id="carousel-2" name="carousel[]">
         <input type="radio" id="carousel-3" name="carousel[]">
         <ul class="carousel__items">
-          <li class="carousel__item"><img src="<%= @car.photo_1%>" alt=""></li>
-          <li class="carousel__item"><img src="<%= @car.photo_2%>" alt=""></li>
-          <li class="carousel__item"><img src="<%= @car.photo_3%>" alt=""></li>
+          <li class="carousel__item"><img src="<%#= @car.photo_1%>" alt=""></li>
+          <li class="carousel__item"><img src="<%#= @car.photo_2%>" alt=""></li>
+          <li class="carousel__item"><img src="<%#= @car.photo_3%>" alt=""></li>
         </ul>
          <div class="carousel__prev">
           <label for="carousel-1"></label>
@@ -39,7 +39,42 @@
            <label for="carousel-2"></label>
            <label for="carousel-3"></label>
          </div>
-       </div>
+      </div> -->
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+<!--         <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol> -->
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="<%= @car.photo_1%>" alt="">
+          </div>
+
+          <div class="item">
+            <img src="<%= @car.photo_2%>" alt="">
+          </div>
+
+          <div class="item">
+            <img src="<%= @car.photo_3%>" alt="">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
        <% end %>
      </div>
   </div>
