--- a/app/assets/stylesheets/damages/_new.scss
+++ b/app/assets/stylesheets/damages/_new.scss
@@ -1,3 +1,94 @@
+
+.damages-container {
+  padding: 15px;
+  p {
+    font-size: 14px !important;
+    color: rgba(0, 0, 0, 0.66);
+  }
+}
+
+.formDamageYesNo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 120px);
+}
+
+.formDamageYesNo-1 {
+  text-align: center;
+}
+
+.formDamageYesNo-3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .formDamageYesNo-3-1 {
+    width: 50%;
+    .btn-hover {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 88% !important;
+    }
+  }
+  .formDamageYesNo-3-2 {
+    width: 50%;
+    .btn-hover {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 88% !important;
+    }
+  }
+}
+
+.choose-form-damage-nature {
+  padding: 15px;
+}
+
+.choose-form-damage-nature-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 450px);
+}
+
+.choose-form-damage-nature-2 {
+  margin-right: 40px;
+}
+
+.nature-damages {
+  display: flex;
+  flex-direction: column;
+}
+
+.nature-damages-1 {
+  padding-bottom: 15px;
+}
+
+.nature-damages-2 {
+  margin-right: 10px;
+  ul {
+    margin-right: 19px;
+  }
+}
+
+.nature-damages-5 {
+  .btn-hover {
+    width: 93% !important;
+  }
+}
+
+.nature-damages-6-1 {
+  margin-right: 40px;
+  li {
+    padding: 45px !important;
+  }
+}
+
+
+
+
 .damages-type {
   display: flex;
   justify-content: center;
@@ -35,7 +126,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 40px;
     margin: 5px;
     box-shadow: 1px 2px 4px rgba(0,0,0,0.2);
     cursor: pointer;
