--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -1,35 +1,47 @@
-<div class="container">
+<div class="damages-container">
+
   <div class="formDamageYesNo">
-    <p>Avez-vous des dommages sur votre voiture ?</p>
-    <p class="btn btn-primary" id="submit-yes-damage">Yes</p>
-    <%= link_to "No", final_validation_car_path(@car), class: "btn btn-danger" %>
+    <div class="formDamageYesNo-2">
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="70"
         aria-valuemin="0" aria-valuemax="100" style="width:77.7%">
         </div>
       </div>
+    </div>
+    <div class="formDamageYesNo-1">
+      <h13>Avez-vous des dommages <br/> sur votre voiture ?</h13>
+
+    </div>
+    <div class="formDamageYesNo-3">
+      <div class="formDamageYesNo-3-1">
+        <h12 class="btn-hover color-5" id="submit-yes-damage">Oui</h12>
+      </div>
+      <div class="formDamageYesNo-3-2">
+        <%= link_to "Non", final_validation_car_path(@car), class: "btn-hover color-11" %>
+      </div>
+    </div>
   </div>
 
   <div id="form-damage">
     <div class="choose-form-damage-nature form-damage-nature">
-      <p>Quelle est la nature de votre dommage ?</p>
-      <ul class="damages-type">
-        <li data-name="carrosserie" class="btn" data-target="form-carrosserie">
-          <i class="fas fa-car-crash"></i>
-          <h4 id="damages-type-font">Carrosserie</h4>
-        </li>
-        <li data-name="mecanique" class='btn' data-target="form-mecanique">
-          <i class="fas fa-wrench"></i>
-          <h4 id="damages-type-font">Mécanique</h4>
-        </li>
-      </ul>
-    </div>
-
-        <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="70"
-        aria-valuemin="0" aria-valuemax="100" style="width:88.8%">
+      <div class="choose-form-damage-nature-container">
+        <div class="choose-form-damage-nature-1">
+          <h13>Quelle est la nature de votre dommage ?</h13>
+        </div>
+        <div class="choose-form-damage-nature-2">
+          <ul class="damages-type">
+            <li data-name="carrosserie" class="btn" data-target="form-carrosserie">
+              <i class="fas fa-car-crash"></i>
+              <h4 id="damages-type-font">Carrosserie</h4>
+            </li>
+            <li data-name="mecanique" class='btn' data-target="form-mecanique">
+              <i class="fas fa-wrench"></i>
+              <h4 id="damages-type-font">Mécanique</h4>
+            </li>
+          </ul>
         </div>
       </div>
+    </div>
   </div>
 
 
@@ -37,45 +49,69 @@
       <%= simple_form_for [@car, @damage] do |f| %>
         <%= f.input :nature, as: :hidden, input_html: { id: 'true-nature-carrosserie'}%>
         <div class="nature-damages">
-          <p>Le dommage sur la carrosserie concerne: </p>
-          <ul class="damages-nature">
-            <% Damage::CARROSSERIE.each do |damage| %>
-            <li class="btn" data-value="<%= damage %>" data-name="carrosserie">
-              <%= damage %>
-            </li>
-            <% end %>
-          </ul>
-          <%= f.input :title, as: :hidden, input_html: { id: 'true-title-carrosserie'}%>
-        </div>
-        <%= f.input :description, as: :text %>
-        <div class="photo-damages">
-          <%= f.input :picture_1, class: "photo-upload" %>
-          <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload" %>
-          <%= f.input :picture_2, class: "photo-upload"  %>
-          <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
-          <%= f.input :picture_3, class: "photo-upload" %>
-          <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
-        </div>
-        <%= f.submit "Finaliser", class: "btn btn-primary"%>
+          <div class="nature-damages-1">
+            <h13>Le dommage sur la carrosserie concerne: </h13>
+          </div>
+          <div class="nature-damages-2">
+            <ul class="damages-nature">
+              <% Damage::CARROSSERIE.each do |damage| %>
+              <li class="btn" data-value="<%= damage %>" data-name="carrosserie">
+                <%= damage %>
+              </li>
+              <% end %>
+            </ul>
+            <%= f.input :title, as: :hidden, input_html: { id: 'true-title-carrosserie'}%>
+          </div>
+          <div class="nature-damages-3">
+            <%= f.input :description, label: "Description", as: :text %>
+          </div>
+          <div class="nature-damages-4">
+            <div class="photo-damages">
+              <%= f.input :picture_1, label: "Photo 1", class: "photo-upload" %>
+              <%= f.input :picture_1_cache, as: :hidden, class: "photo-upload" %>
+              <%= f.input :picture_2, label: "Photo 2", class: "photo-upload"  %>
+              <%= f.input :picture_2_cache, as: :hidden, class: "photo-upload" %>
+              <%= f.input :picture_3, label: "Photo 3", class: "photo-upload" %>
+              <%= f.input :picture_3_cache, as: :hidden, class: "photo-upload" %>
+            </div>
+          </div>
+          <div class="final-step-button">
+            <%= f.submit "Finaliser", class: "btn-hover color-5"%>
+          </div>
       <% end %>
-
+      </div>
     </div>
+
     <div class="form-damage-nature hide-or-active" id="form-mecanique">
       <%= simple_form_for [@car, @damage] do |f| %>
         <%= f.input :nature, as: :hidden, input_html: { id: 'true-nature-mecanique'}%>
+
         <div class="nature-damages">
-          <p>Le dommage sur la mécanique concerne: </p>
-          <ul class="damages-nature">
-            <% Damage::MECANIQUE.each do |damage| %>
-            <li class="btn" data-value="<%= damage %>" data-name="mecanique">
-              <%= damage %>
-            </li>
-            <% end %>
-          </ul>
-          <%= f.input :title, as: :hidden, input_html: { id: 'true-title-mecanique'}%>
+
+          <div class="nature-damages-5">
+            <h13>Le dommage sur la mécanique concerne: </h13>
+          </div>
+
+          <div class="nature-damages-6">
+            <ul class="damages-nature nature-damages-6-1">
+              <% Damage::MECANIQUE.each do |damage| %>
+              <li class="btn" data-value="<%= damage %>" data-name="mecanique">
+                <%= damage %>
+              </li>
+              <% end %>
+            </ul>
+            <%= f.input :title, as: :hidden, input_html: { id: 'true-title-mecanique'}%>
+          </div>
+
+          <div class="nature-damages-7">
+            <%= f.input :description, as: :text %>
+          </div>
+
+          <div class="final-step-button">
+            <%= f.submit "Finaliser", class: "btn-hover color-5"%>
+          </div>
+
         </div>
-        <%= f.input :description, as: :text %>
-        <%= f.submit "Finaliser", class: "btn btn-primary"%>
       <% end %>
     </div>
 
