--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -10,8 +10,8 @@
     </div>
 
     <div class="start-title">
-      <p>Pour commencer, vous devez vous rendre près de votre voiture.</p>
-      <p>Nous allons avoir besoin de votre kilometrage exacte, et de quelques photos</p>
+      <h13>Pour commencer, <br/>rendez-vous près de votre voiture !</h13>
+      <p style="padding:20px"><strong>Karl</strong> a besoin de votre kilometrage exact, <br/>et de quelques photos</p>
     </div>
 
     <div class="car-image">
@@ -23,7 +23,7 @@
     <div class="start-button-box">
       <div class="start-button-box-1">
         <%= link_to edit_car_path(@car) do %>
-          <button class="btn-hover color-5">Je suis près de ma voiture !</button>
+          <button class="btn-hover color-5">Vous êtes prêt !</button>
         <%end%>
       </div>
     </div>
