--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -17,11 +17,12 @@
           </div>
 
           <div class="description-edit-1-1">
+            <% options = ["Je déménage", "J'achète une nouvelle voiture", "Je préfère le co-voiturage"] %>
             <%= f.input :why_selling, label: "Pour quelle raison vendez-vous votre voiture ?", placeholder:"Achat d'une nouvelle voiture", as: :text %>
           </div>
 
           <div class="description-edit-2-1">
-            <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-why-selling" %>
+            <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-why-selling" %>
           </div>
 
       </div>
@@ -43,7 +44,7 @@
           </div>
 
           <div class="edit-address-2">
-              <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-address"%>
+              <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-address"%>
           </div>
 
       </div>
@@ -63,7 +64,7 @@
         </div>
 
         <div class="edit-kilometers-2">
-          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-km"%>
+          <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-km"%>
         </div>
 
 
@@ -92,7 +93,7 @@
         </div>
 
         <div class="edit-pictures-2">
-          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-picture"%>
+          <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-picture"%>
         </div>
 
 
@@ -113,7 +114,7 @@
         </div>
 
         <div class="edit-technical-control-2">
-          <%= f.submit "Je passe à l'étape suivante", class: "btn-hover color-5", id: "submit-technical-control"%>
+          <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-technical-control"%>
         </div>
 
       </div>
