--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
     <div class="body-home">
       <div class="comment-form">
         <div class="comment-form-text">
-          <p>Karl va vous aider à vendre votre voiture au meilleur prix et rapidement. Commençons par l’estimation.</p>
+          <p>Karl vous aide à vendre votre voiture au meilleur prix et rapidement. <br/> Commençons par l’estimation:</p>
         </div>
         <div class="first-form">
           <%= simple_form_for @car do |f| %>
