--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -81,7 +81,7 @@
         </div>
 
         <div class="edit-pictures-1">
-          <h5>Ajouter des photos :</h5>
+          <h5>Ajoutez des photos :</h5>
           <div class="photo-upload-features">
             <%= f.input :photo_1, label: "Photo 1:",class: "photo-upload" %>
             <%= f.input :photo_1_cache, as: :hidden, class: "photo-upload" %>
